platform/networking/debug/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: debug
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 80
